LSH euclidean (beta)

--- a/cluster.conf
+++ b/cluster.conf
@@ -1,4 +1,7 @@
-number_of_clusters: 10
-number_of_hash_functions: 4
-number_of_hash_tables: 5
-max_iterations: 20
+number_of_clusters: 40
+number_of_hash_functions: 6
+number_of_hash_tables: 6
+max_iterations: 25
+init: 1
+assign: 2
+update: 1
