--- a/cluster.conf
+++ b/cluster.conf
@@ -1,4 +1,9 @@
-number_of_clusters: 2
-number_of_hash_functions: 4
-number_of_hash_tables: 5
+number_of_clusters: 40
+number_of_hash_functions: 6
+number_of_hash_tables: 6
 max_iterations: 25
+MC: 10
+probes: 2
+init: 1
+assign: 2
+update: 1
