--- a/cluster.conf
+++ b/cluster.conf
@@ -1,7 +1,9 @@
-number_of_clusters: 40
+number_of_clusters: 20
 number_of_hash_functions: 6
 number_of_hash_tables: 6
-max_iterations: 25
+max_iterations: 10
+MC: 10
+probes: 2
 init: 1
-assign: 2
+assign: 1
 update: 1
